# detectordag

./: .env  .gitignore  README.md  architecture.yml  docker-compose.yml  go.mod  go.sum  mage.go  samconfig.toml  template.yml  topicRule.json
edge/: .dockerignore  .env.example  .pylintrc  CONTRIBUTING.rst  Dockerfile  Dockerfile.template  LICENSE  Pipfile  README.rst  docker-compose.yml  invoke.py  main.go  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py
edge/access-point/: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  Dockerfile.template  jest.config.js  next.config.js  package.json
edge/access-point/components/: WithLoading.js  WithLoading.tsx  layout.js  layout.jsx  registrationForm.js  registrationForm.jsx
edge/access-point/pages/: _app.js  _app.tsx  index.js  index.jsx  success.js  success.jsx
edge/access-point/tests/: App.test.js  Home.test.js
edge/cmd/: app.go  mock.go  root.go
edge/detector/: .dockerignore  .env.example  Dockerfile.template  mypy.ini  setup.cfg  setup.py  tasks.py
edge/detector/.github/: ISSUE_TEMPLATE.md
edge/detector/edge/: aws.py  cli.py  config.py  edge.py  mocks.py
edge/detector/tests/: __init__.py  test_config.py
edge/detectordag_edge/: __init__.py  cli.py
edge/docker/: Dockerfile
edge/docs/: conf.py  index.rst  installation.rst  usage.rst
edge/edge/: __init__.py  aws.py  cli.py  config.py  data.py  edge.py  exceptions.py  ina219.py  mocks.py  power.py  timer.py
edge/internal/: monitor.go  rabbit.go
edge/tests/: test_config.py  test_data.py  test_detectordag_edge.py  test_edge.py  test_timer.py
(+240 files in other folders)
