[tool.poetry]
name = "edge"
version = "0.1.0"
description = "Detector-dag edge application"
authors = ["briggySmalls <info@sambriggs.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
environs = "^9.2.0"
pydantic = "^1.7.3"
stringcase = "^1.2.0"
awsiotsdk = "^1.12.5"
smbus2 = "^0.4.2"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
bumpversion = "^0.6.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "^6.2.0"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^1.0.0"

[tool.poetry.scripts]
edge = 'edge.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

